Fri, 31 Aug 2007 23:38:01 +0200 <thp@perli.net>
Handle enclosures (or lack thereof) better if fields are missing

	* src/gpodder/gui.py: Remove refetch_channel_list() function, as this
	is not called anywhere from the code (uh, how did i miss that?)
	* src/gpodder/libpodcasts.py: Be more liberal to enclosure tags
	without length or mime type; ignore episodes without enclosures (it's
	not len(enclosures) == 0, but the enclosures attribute doesn't even
	exist on entries without enclosures, so make sure to check for that

Fri, 31 Aug 2007 20:03:03 +0200 <thp@perli.net>
Use Python's webbrowser module for URL opening; channel dialog clean-up

	* bin/gpodder: Set version to 0.9.5+svn (this is where we are now)
	* data/gpodder.glade: Remove "cancel" button from gPodderChannel
	* src/gpodder/gui.py: Use "webbrowser" module for URL opening instead
	of relying on "gnome-open" to be available; remove event handler for
	gPodderChannel's "cancel" button

Thu, 30 Aug 2007 21:06:28 +0200 <thp@perli.net>
Dependency check for python-feedparser in bin/gpodder

	* bin/gpodder: Add dependency check and warning (with exit) if
	python-feedparser is not installed, as python-feedparser now is a
	dependency of gPodder

Thu, 30 Aug 2007 20:51:46 +0200 <thp@perli.net>
Support for modifying DownloadHistory and PlaybackHistory in GUI

	* data/gpodder.glade: Added menu items in gPodder main window
	* src/gpodder/gui.py: Add menu items to treeAvailable's context menu
	to toggle/set downloaded and played status on selected episodes
	* src/gpodder/libgpodder.py: Add del_item() function to
	DownloadHistory to support removing items from the history list;
	enhance history_mark_{played,downloaded}() functions for add/delete

Thu, 30 Aug 2007 20:46:48 +0200 <thp@perli.net>
Improved pubDate parsing; episode delete bugfix

	* src/gpodder/libpodcasts.py: Let feedparser parse the pubDate field
	of episodes and use new function in gpodder.util to convert the parsed