@@ -1,3 +1,13 @@
+Sun, 02 Sep 2007 14:23:17 +0200 <thp@perli.net>
+More sanitizing hacks for ugly feeds we don't really like
+
+	* src/gpodder/libpodcasts.py: Negotiate which enclosure to select from
+	multiple enclosures, if there are more than one available; skip
+	episodes with a buggy download URL (i.e. no supported URL scheme)
+	* src/gpodder/util.py: Return "(unknown)" if file size cannot be
+	determined from the string passed to format_filesize(); return "None"
+	in file_type_by_extension() if the extension is an empty string
+
 Fri, 31 Aug 2007 23:38:01 +0200 <thp@perli.net>
 Handle enclosures (or lack thereof) better if fields are missing
 
